<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="2dp"
    android:layout_marginTop="5dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/peace_icon"
        app:shapeAppearanceOverlay="@style/curved"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/NamePV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/song_name"
        android:layout_toEndOf="@id/imagePV"
        android:layout_toStartOf="@id/duration"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/albumPV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/album_name"
        android:layout_toEndOf="@id/imagePV"
        android:layout_toStartOf="@id/duration"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/start_tv"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginHorizontal="5dp"/>



</RelativeLayout>